--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -86,20 +86,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install ipython-sql~=0.4 --upgrade\n",
+    "!pip install --upgrade pip\n",
+    "!pip install ipython-sql~=0.5 --upgrade\n",
     "!pip install psycopg2-binary\n",
-    "!pip install sqlalchemy~=1.4 --upgrade\n",
+    "!pip install SQLAlchemy --upgrade \n",
     "!pip install sqlparse\n",
     "!pip install pgspecial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip show sqlalchemy"
    ]
   },
   {
@@ -158,9 +150,9 @@
     "MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
     "MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
     "\n",
-    "# Gitpod specific\n",
-    "#MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
-    "#MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
+    "# Uncomment for Gitpod deployment\n",
+    "# # MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
+    "# MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
     "\n",
     "# env_vars defines the following\n",
     "MY_DB_NAME=os.environ.get('MY_DB_NAME')\n",
@@ -174,13 +166,14 @@
     "MY_NOTEBOOK_DATA_FOLDER=MY_NOTEBOOK_DIR +'/data'\n",
     "MY_NOTEBOOK_UTILS_FOLDER=MY_NOTEBOOK_DIR + '/utils'\n",
     "\n",
-    "MY_DATA_DDL_FILE_01=os.environ.get(\"MY_DATA_DDL_FILE_01\")\n",
-    "MY_DATA_DML_FILE_01=os.environ.get(\"MY_DATA_DML_FILE_01\")\n",
-    "MY_DATA_DDL_FILE_02=os.environ.get(\"MY_DATA_DDL_FILE_02\")\n",
-    "MY_DATA_DML_FILE_02=os.environ.get(\"MY_DATA_DML_FILE_02\")\n",
-    "MY_DATA_DDL_FILE_03=os.environ.get(\"MY_DATA_DDL_FILE_03\")\n",
-    "MY_DATA_DML_FILE_03=os.environ.get(\"MY_DATA_DML_FILE_03\")\n",
-    "\n",
+    "MY_DATA_DDL_FILE_0=os.environ.get(\"MY_DATA_DDL_FILE_0\")\n",
+    "MY_DATA_DML_FILE_0=os.environ.get(\"MY_DATA_DML_FILE_0\")\n",
+    "MY_DATA_DDL_FILE_1=os.environ.get(\"MY_DATA_DDL_FILE_1\")\n",
+    "MY_DATA_DML_FILE_1=os.environ.get(\"MY_DATA_DML_FILE_1\")\n",
+    "MY_DATA_DDL_FILE_2=os.environ.get(\"MY_DATA_DDL_FILE_2\")\n",
+    "MY_DATA_DML_FILE_2=os.environ.get(\"MY_DATA_DML_FILE_2\")\n",
+    "MY_DATA_DDL_FILE_3=os.environ.get(\"MY_DATA_DDL_FILE_3\")\n",
+    "MY_DATA_DML_FILE_3=os.environ.get(\"MY_DATA_DML_FILE_3\")\n",
     "MY_UTIL_FUNCTIONS_FILE=os.environ.get(\"MY_UTIL_FUNCTIONS_FILE\")\n",
     "MY_UTIL_YBTSERVER_METRICS_FILE=os.environ.get(\"MY_UTIL_YBTSERVER_METRICS_FILE\")\n",
     "\n",
@@ -201,15 +194,42 @@
     "%store MY_NOTEBOOK_DATA_FOLDER\n",
     "%store MY_NOTEBOOK_UTILS_FOLDER\n",
     "\n",
-    "%store MY_DATA_DDL_FILE_01\n",
-    "%store MY_DATA_DML_FILE_01\n",
-    "%store MY_DATA_DDL_FILE_02\n",
-    "%store MY_DATA_DML_FILE_02\n",
-    "%store MY_DATA_DDL_FILE_03\n",
-    "%store MY_DATA_DML_FILE_03\n",
+    "%store MY_DATA_DDL_FILE_0\n",
+    "%store MY_DATA_DML_FILE_0\n",
+    "%store MY_DATA_DDL_FILE_1\n",
+    "%store MY_DATA_DML_FILE_1\n",
+    "%store MY_DATA_DDL_FILE_2\n",
+    "%store MY_DATA_DML_FILE_2\n",
+    "%store MY_DATA_DDL_FILE_3\n",
+    "%store MY_DATA_DML_FILE_3\n",
     "\n",
     "%store MY_UTIL_FUNCTIONS_FILE\n",
     "%store MY_UTIL_YBTSERVER_METRICS_FILE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# connect use Python 3.7.9+\n",
+    "import psycopg2\n",
+    "import sqlalchemy as alc\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# Inspiration from https://medium.com/analytics-vidhya/postgresql-integration-with-jupyter-notebook-deb97579a38d\n",
+    "# Use %store -r to read 01_Lab_Requirements_Setup variables\n",
+    "\n",
+    "\n",
+    "db_host=MY_HOST_IPv4_02\n",
+    "db_name=MY_DB_NAME\n",
+    "\n",
+    "\n",
+    "connection_str='postgresql://yugabyte@'+db_host+':5433/'+db_name\n",
+    "print(connection_str)\n",
+    "\n",
+    "engine = create_engine(connection_str)"
    ]
   },
   {
@@ -335,8 +355,7 @@
     "cd $YB_PATH\n",
     "\n",
     "# Metrics file\n",
-    "./bin/ysqlsh -d ${DB_NAME} -f ${UTIL_YBTSERVER_METRICS_FILE}\n",
-    "# >&/dev/null\n",
+    "./bin/ysqlsh -d ${DB_NAME} -f ${UTIL_YBTSERVER_METRICS_FILE} >&/dev/null\n",
     "\n",
     "# Describe relations\n",
     "./bin/ysqlsh -d ${DB_NAME} -c \"\\df\""
@@ -378,7 +397,7 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_DATA_FOLDER\" \"$MY_DATA_DDL_FILE\" \"$MY_DATA_DML_FILE\"   # World Cities\n",
+    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_DATA_FOLDER\" \"$MY_DATA_DDL_FILE_0\" \"$MY_DATA_DML_FILE_0\"   # World Cities\n",
     "YB_PATH=${1}\n",
     "DB_NAME=${2}\n",
     "DATA_FOLDER=${3}\n",
@@ -390,7 +409,7 @@
     "WORLD_DDL_PATH=${DATA_FOLDER}/${DATA_DDL_FILE}\n",
     "WORLD_DML_PATH=${DATA_FOLDER}/${DATA_DML_FILE}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd ${YB_PATH}\n",
     "\n",
     "# DDL file\n",
     "./bin/ysqlsh -d ${DB_NAME} -f ${WORLD_DDL_PATH} >&/dev/null\n",
@@ -457,12 +476,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'psycopg2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/seth/Documents/GitHub/YugabyteDB-University/YSQL-LP/01_Lab_Setup.ipynb Cell 23\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/seth/Documents/GitHub/YugabyteDB-University/YSQL-LP/01_Lab_Setup.ipynb#X31sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Connect to db_ybu\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/seth/Documents/GitHub/YugabyteDB-University/YSQL-LP/01_Lab_Setup.ipynb#X31sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# Inspiration from https://medium.com/analytics-vidhya/postgresql-integration-with-jupyter-notebook-deb97579a38d\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/seth/Documents/GitHub/YugabyteDB-University/YSQL-LP/01_Lab_Setup.ipynb#X31sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpsycopg2\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/seth/Documents/GitHub/YugabyteDB-University/YSQL-LP/01_Lab_Setup.ipynb#X31sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msqlalchemy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39malc\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/seth/Documents/GitHub/YugabyteDB-University/YSQL-LP/01_Lab_Setup.ipynb#X31sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msqlalchemy\u001b[39;00m \u001b[39mimport\u001b[39;00m create_engine\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'psycopg2'"
+     ]
+    }
+   ],
    "source": [
     "# Connect to db_ybu\n",
     "# Inspiration from https://medium.com/analytics-vidhya/postgresql-integration-with-jupyter-notebook-deb97579a38d\n",
@@ -474,9 +505,9 @@
     "db_host=MY_HOST_IPv4_01\n",
     "db_name=MY_DB_NAME\n",
     "\n",
-    "connection_str='postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n",
-    "\n",
-    "# engine = create_engine(connection_str)"
+    "connection_str='postgresql://yugabyte:yte@'+db_host+':5433/'+db_name\n",
+    "print(connection_str)\n",
+    "engine = create_engine(connection_str)"
    ]
   },
   {
@@ -501,6 +532,34 @@
     "%reload_ext sql\n",
     "# creates connection for sql magic\n",
     "%sql {connection_str}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " %config SqlMagic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql \\d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql postgresql://yugabyte@127.0.0.1:5433/db_ybu\n",
+    "# creates connection for sql magic\n"
    ]
   },
   {
@@ -600,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
