--- a/01_YSQL_Development.ipynb
+++ b/01_YSQL_Development.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,21 +53,21 @@
     "%store -r MY_NOTEBOOK_DATA_FOLDER\n",
     "%store -r MY_NOTEBOOK_UTILS_FOLDER\n",
     "\n",
-    "%store -r MY_DATA_DDL_FILE_01\n",
-    "%store -r MY_DATA_DML_FILE_01\n",
-    "%store -r MY_DATA_DDL_FILE_02\n",
-    "%store -r MY_DATA_DML_FILE_02\n",
-    "%store -r MY_DATA_DDL_FILE_03\n",
-    "%store -r MY_DATA_DML_FILE_03\n",
+    "%store -r MY_DATA_DDL_FILE_1\n",
+    "%store -r MY_DATA_DML_FILE_1\n",
+    "%store -r MY_DATA_DDL_FILE_2\n",
+    "%store -r MY_DATA_DML_FILE_2\n",
+    "%store -r MY_DATA_DDL_FILE_3\n",
+    "%store -r MY_DATA_DML_FILE_3\n",
     "\n",
     "db_host=MY_HOST_IPv4_01\n",
     "db_name=MY_DB_NAME\n",
     "\n",
     "\n",
-    "connection_str='postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n",
+    "connection_str='postgresql://yugabyte@'+db_host+':5433/'+db_name\n",
     "\n",
     "\n",
-    "# engine = create_engine(connection_str)"
+    "engine = create_engine(connection_str)"
    ]
   },
   {
@@ -79,9 +79,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/seth/Documents/GitHub/YugabyteDB-University/YSQL-LP/.venv/lib/python3.7/site-packages/sql/magic.py\", line 203, in execute\n",
+      "    conn.internal_connection.rollback()\n",
+      "AttributeError: 'Connection' object has no attribute 'rollback'\n",
+      "\n",
+      "Connection info needed in SQLAlchemy format, example:\n",
+      "               postgresql://username:password@hostname/dbname\n",
+      "               or an existing connection: dict_keys(['postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu', 'postgresql://yugabyte@127.0.0.1:5433/db_ybu'])\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext sql\n",
     "\n",
@@ -110,9 +125,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/seth/Documents/GitHub/YugabyteDB-University/YSQL-LP/.venv/lib/python3.7/site-packages/sql/magic.py\", line 203, in execute\n",
+      "    conn.internal_connection.rollback()\n",
+      "AttributeError: 'Connection' object has no attribute 'rollback'\n",
+      "\n",
+      "Connection info needed in SQLAlchemy format, example:\n",
+      "               postgresql://username:password@hostname/dbname\n",
+      "               or an existing connection: dict_keys(['postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu'])\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "#%% python, but prepared statements as sql magic\n",
     "if (MY_GITPOD_WORKSPACE_URL is None):\n",
@@ -150,6 +182,69 @@
    "metadata": {},
    "source": [
     "---\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "create table order_changes (\n",
+    "  change_date date,\n",
+    "  order_id integer,\n",
+    "  description text\n",
+    "  )\n",
+    "partition by range (change_date);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "insert into t1 values (100),(200),(300);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "alter table t1 add column col2 varchar(50);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "delete from t1 where col1 = 300;    "
    ]
   },
   {
@@ -246,21 +341,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Cell magic `%%sql` not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql\n",
     "\n",
@@ -270,7 +357,7 @@
     "insert into tbl_employees (empno, ename, job, mgr, hiredate, sal, comm, deptno, email, other_info) VALUES (7566, 'JONES', 'MANAGER', 7839, '1981-04-02', 2975, NULL, 20,'JONES@gmail.com', null);\n",
     "insert into tbl_employees (empno, ename, job, mgr, hiredate, sal, comm, deptno, email, other_info) VALUES (7654, 'MARTIN', 'SALESMAN', 7698, '1981-09-28', 1250, 1400, 30,'MARTIN@acme.com', null);\n",
     "insert into tbl_employees (empno, ename, job, mgr, hiredate, sal, comm, deptno, email, other_info) VALUES (7698, 'BLAKE', 'MANAGER', 7839, '1981-05-01', 2850, NULL, 30,'BLAKE@hotmail.com', null);\n",
-    "insert into tbl_employees (empno, ename, job, mgr, hiredate, sal, comm, deptno, email, other_info) VALUES (7782, 'CLARK', 'MANAGER', 7839, '1981-06-09', 2450, NULL, 10,'CLARK@acme.com', '{\"skills\":[\"C\",\"C++\",\"SQL\"]}')\n",
+    "insert into tbl_employees (empno, ename, job, mgr, hiredate, sal, comm, deptno, email, other_info) VALUES (7782, 'CLARK', 'MANAGER', 7839, '1981-06-09', 2450, NULL, 10,'CLARK@acme.com', '{\"skills\": [\"C\",\"C++\",\"SQL\"] }');\n",
     "insert into tbl_employees (empno, ename, job, mgr, hiredate, sal, comm, deptno, email, other_info) VALUES (7788, 'SCOTT', 'ANALYST', 7566, '1982-12-09', 3000, NULL, 20,'SCOTT@acme.com', '{\"cat\":\"tiger\"}');\n",
     "insert into tbl_employees (empno, ename, job, mgr, hiredate, sal, comm, deptno, email, other_info) VALUES  (7839, 'KING', 'PRESIDENT', NULL, '1981-11-17', 5000, NULL, 10,'KING@aol.com', null); \n",
     "insert into tbl_employees (empno, ename, job, mgr, hiredate, sal, comm, deptno, email, other_info) VALUES (7844, 'TURNER', 'SALESMAN', 7698, '1981-09-08', 1500, 0, 30,'TURNER@acme.com', null);\n",
@@ -417,7 +504,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "execute employee_salary(7900);"
+    "execute employee_salary(7499);"
    ]
   },
   {
@@ -597,7 +684,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "explain analyze select * from demo where val=5 order by num fetch first 3 rows only;"
+    "explain analyze select * from tbl_demo where val=5 order by num fetch first 3 rows only;"
    ]
   },
   {
@@ -621,7 +708,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "drop table if exists demo;"
+    "drop table if exists tbl_demo;"
    ]
   },
   {
@@ -717,13 +804,14 @@
    "source": [
     "%%sql\n",
     "\n",
-    "with emp_evaluation_period as (\n",
+    "with employees_evaluation_period  as (\n",
     " select ename,deptno,hiredate,\n",
     " hiredate + case when job in ('MANAGER','PRESIDENT')\n",
     " then interval '3 month' else interval '4 weeks'\n",
-    " end evaluation_end from tbl_employees)\n",
-    "select * from tbl_employees_evaluation_period e1\n",
-    " join emp_evaluation_period e2\n",
+    " end evaluation_end \n",
+    " from tbl_employees)\n",
+    "select * from employees_evaluation_period e1\n",
+    " join  employees_evaluation_period e2\n",
     " on (e1.ename>e2.ename) and (e1.deptno=e2.deptno)\n",
     "where (e1.hiredate,e1.evaluation_end)\n",
     " overlaps (e2.hiredate,e2.evaluation_end);"
@@ -754,11 +842,11 @@
     "YB_PATH=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "SQL_CROSSTABVIEW=\"select job, dname, sum(sal) from tbl_employees join tbl_departments using(deptno) group by dname, job \\crosstabview\"\n",
+    "SQL_CROSSTABVIEW=\"\\crosstabview\"\n",
     "\n",
     "cd $YB_PATH\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c ${SQL_CROSSTABVIEW}"
+    "./bin/ysqlsh -d ${DB_NAME} -c \"select job, dname, sum(sal) from tbl_employees join tbl_departments using(deptno) group by dname, job;\""
    ]
   },
   {
@@ -775,7 +863,8 @@
     "\n",
     "select job, dname, sum(sal)\n",
     "from tbl_employees join tbl_departments using(deptno)\n",
-    "group by dname, job"
+    "group by dname, job;\n",
+    "\\crosstabview"
    ]
   },
   {
@@ -1006,12 +1095,12 @@
     "as $$\n",
     "begin\n",
     "  update tbl_employees set comm=comm-commission_transfer.amount\n",
-    "    where empno=commission_transfer.empno1 and comm>commission_transfer.amount;\n",
+    "    where tbl_employees.empno=commission_transfer.empno1 and comm>commission_transfer.amount;\n",
     "  if not found then \n",
     "    raise exception 'Cannot transfer % from %',amount,empno1;\n",
     "  end if;\n",
     "  update tbl_employees set comm=comm+commission_transfer.amount\n",
-    "    where emp.empno=commission_transfer.empno2;\n",
+    "    where tbl_employees.empno=commission_transfer.empno2;\n",
     "  if not found then \n",
     "    raise exception 'Cannot transfer from %',empno2; \n",
     "  end if;\n",
@@ -1040,7 +1129,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "call commission_transfer(7521,7654,100);"
+    "call commission_transfer(7521,7654,1000);"
    ]
   },
   {
@@ -1189,21 +1278,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Cell magic `%%sql` not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql\n",
     "\n",
@@ -1231,11 +1312,10 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "begin transaction;\n",
+    "-- begin transaction;-- commit;\n",
     "update tbl_departments set loc='SUNNYVALE' where deptno=30;\n",
     "select pg_sleep(3);\n",
-    "update tbl_departments set loc='SUNNYVALE' where deptno=40;\n",
-    "commit;"
+    "update tbl_departments set loc='SUNNYVALE' where deptno=40;\n"
    ]
   },
   {
@@ -1290,10 +1370,11 @@
     "\n",
     "create materialized view mvw_report_sal_per_dept as\n",
     "select \n",
-    "deptno,dname,\n",
-    "sum(sal) sal_per_dept,\n",
-    "count(*) num_of_employees,\n",
-    "string_agg(distinct job,', ') distinct_jobs\n",
+    "    deptno,\n",
+    "    dname,\n",
+    "    sum(sal) sal_per_dept,\n",
+    "    count(*) num_of_employees,\n",
+    "    string_agg(distinct job,', ') distinct_jobs\n",
     "from tbl_departments join tbl_employees using(deptno)\n",
     "group by deptno,dname\n",
     "order by deptno;"
@@ -1318,7 +1399,7 @@
    "source": [
     "%%sql\n",
     "drop index if exists idx_mvw_report_sal_per_dept_sal;\n",
-    "create index if not exists idx_mvw_report_sal_per_dept_sal on report_sal_per_dept(sal_per_dept desc);"
+    "create index if not exists idx_mvw_report_sal_per_dept_sal on mvw_report_sal_per_dept(sal_per_dept desc);"
    ]
   },
   {
