--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -1,37 +1,65 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
     "editable": false
    },
    "source": [
-    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/YBU_Logo.webp\" /></a></div>\n",
+    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/YBU_Logo.png\" /></a></div>\n",
     "\n",
-    "# Lab Requirements and Setup\n",
+    "> **YugabyteDB YSL Development**\n",
+    ">\n",
+    "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/).\n",
+    ">\n",
     "\n",
-    "This lab consists of several Jupyter notebooks and runs in Gitpod using VS Code.  Follow the instructions for requirements and setup.\n",
+    "# Introduction\n",
+    "The labs for this course consists of several Jupyter notebooks that run in Gitpod. [Gitpod](https://www.gitpod.io/) facilitates runtime environments using Ubuntu and VS Code in a Chromium (browser) environment. \n",
     "\n",
-    "## About Jupyter notebooks\n",
-    "A notebook consists of one or more cells. In VS Code, notebooks cells are editable. \n",
+    "A Gitpod instance belongs to your Gitpod workspace. The instance automatically runs a three node, YugabyteDB database cluster. YugabyteDB is the world's #1 open source, distributed SQL database. \n",
     "\n",
-    "There are two types of cells: markdown and code. This is a markdown cell.\n",
-    "\n",
-    "You run a code cell by simply selecting the play icon in the cell's left gutter. For code cells, you can modify the code for execution. Certain labs contain challenges or experiments that require you to do just that - modify a code cell and re-run it!\n",
-    "\n",
-    "### Requirements\n",
-    "Here are the requirements for this lab:\n",
-    "- Launch using a gitpod workspace\n",
-    "- Run a three node, YugabyteDB cluster using `yb-ctl`\n",
-    "\n",
-    "> Note\n",
-    ">  \n",
     "> Although a three node cluster is up and running, Gitpod does not support visiting loopback addresses over a web ui, even if exposed on a different port.\n",
-    "> 127.0.0.1 is the only web user interfaces. To see all available ports in Gitpod, in the terminal, run `gp ports list`."
+    "> 127.0.0.1 is the only web user interface that is exposed. To see all available ports in Gitpod, in the Terminal tab, you can run `gp ports list`.\n",
+    "> \n",
+    "\n",
+    "## 🛠️ Requirements\n",
+    "Here are the requirements for this lab:\n",
+    "- ✅ Launch using this Gitpod workspace, which you are already doing\n",
+    "- ✅ A running, 3 node YugabyteDB cluster, which is already running\n",
+    "- ☑️ A Python 3.8.13 or higher kernel for the notebook, *which you need to select right now!!!*\n",
+    "\n",
+    "\n",
+    "### Select your notebook kernel\n",
+    "- In the Notebook toolbar, click **Select Kernel**.\n",
+    "<br>\n",
+    "<img width=50% src=\"assets/01_01_Select_Kernel_Toolbar.png\" />\n",
+    "\n",
+    "- Next, in the dropdown, select **Python 3.8.13** or higher.\n",
+    "<br>\n",
+    "<img width=50% src=\"assets/01_02_Select_Kernel_Dropdown.png\" />\n",
+    "\n",
+    "That's it!\n"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## About Jupyter notebooks\n",
+    "A Juypter notebook is a runtime environment for executing code. A notebook consists of one or more cells. There are three types of cells in a notebook: Markdown, Code, and Output. This is a Markdown cell.\n",
+    "\n",
+    "A cell has two modes: read-mode and edit-mode. By default, the cells in a notebook are in read-mode. You can run a read-mode cell that is code. To execute a code cell, select the play icon in the cell's left gutter. \n",
+    "\n",
+    "The execution of a code cell often results in Output. An Output cell shows the `stdout` of the previous executed code cell. You can delete an Output cell. You can also collapse the cell. In addition, you can also select `Clear Outputs of All Cells`.\n",
+    "\n",
+    "To modify a cell, select `Enter` or `Return`. In edit-mode, you can modify the contents of a cell. Certain labs contain challenges or experiments that require you to do just that: modify a code cell and re-run it! To switch from edit-mode to read-mode, use the `Shift+Enter` or `Shift+Return` keystroke."
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -59,13 +87,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
     "editable": false
    },
    "source": [
-    "## Setup steps\n",
+    "---\n",
+    "## 👣 Setup steps\n",
     "Here are the steps to setup this lab:\n",
     "- Install missing dependencies and restart the notebook\n",
     "- Create the notebook variables\n",
@@ -91,20 +121,8 @@
     "!pip install psycopg2-binary\n",
     "!pip install SQLAlchemy --upgrade \n",
     "!pip install sqlparse\n",
-    "!pip install pgspecial"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Important!\n",
-    "> \n",
-    "> To restart the Notebook, all you need to do is to select Restart in the notebook toolbar. \n",
-    "> \n",
-    "> Do NOT skip this step.\n",
-    "> \n",
-    "> After restarting the notebook, you can continue running the notebook cells below, beginning with **Create the notebook variables**.\n"
+    "!pip install html2text\n",
+    "!pip install jq"
    ]
   },
   {
@@ -144,15 +162,24 @@
     "for var in env_vars:\n",
     "    key, value = var.split('=')\n",
     "    os.environ[key] = value\n",
-    " \n",
     "\n",
-    "# Comment out Local\n",
+    "\n",
+    "\n",
+    "### Begin: Gitpod or local\n",
+    "#\n",
+    "### Uncomment Gitpod specific\n",
+    "#\n",
+    "#MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
+    "#MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA')\n",
+    "#MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
+    "#\n",
+    "### Comment out Local \n",
+    "#\n",
     "MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
+    "MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_LOCAL')\n",
     "MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
-    "\n",
-    "# Uncomment for Gitpod deployment\n",
-    "# # MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
-    "# MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
+    "##\n",
+    "### End: Gitpod or local\n",
     "\n",
     "# env_vars defines the following\n",
     "MY_DB_NAME=os.environ.get('MY_DB_NAME')\n",
@@ -161,11 +188,16 @@
     "MY_HOST_IPv4_03=os.environ.get('MY_HOST_IPv4_03')\n",
     "MY_TSERVER_WEBSERVER_PORT=os.environ.get('MY_TSERVER_WEBSERVER_PORT')\n",
     "\n",
+    "# Gitpod URLS\n",
+    "MY_YB_MASTER_HOST_GITPOD_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
+    "MY_YB_TSERVER_HOST_GITPOD_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://'+MY_TSERVER_WEBSERVER_PORT+'-')\n",
+    "\n",
     "# Current directory of project and related child folders\n",
     "MY_NOTEBOOK_DIR=os.getcwd()\n",
     "MY_NOTEBOOK_DATA_FOLDER=MY_NOTEBOOK_DIR +'/data'\n",
     "MY_NOTEBOOK_UTILS_FOLDER=MY_NOTEBOOK_DIR + '/utils'\n",
     "\n",
+    "# Files\n",
     "MY_DATA_DDL_FILE_0=os.environ.get(\"MY_DATA_DDL_FILE_0\")\n",
     "MY_DATA_DML_FILE_0=os.environ.get(\"MY_DATA_DML_FILE_0\")\n",
     "MY_DATA_DDL_FILE_1=os.environ.get(\"MY_DATA_DDL_FILE_1\")\n",
@@ -178,22 +210,21 @@
     "MY_UTIL_YBTSERVER_METRICS_FILE=os.environ.get(\"MY_UTIL_YBTSERVER_METRICS_FILE\")\n",
     "\n",
     "\n",
-    "\n",
     "# Store the note book values for other notebooks to use\n",
     "\n",
-    "%store MY_YB_PATH\n",
-    "%store MY_GITPOD_WORKSPACE_URL\n",
-    "\n",
     "%store MY_DB_NAME\n",
+    "%store MY_YB_PATH\n",
+    "%store MY_YB_PATH_DATA\n",
+    "%store MY_GITPOD_WORKSPACE_URL\n",
     "%store MY_HOST_IPv4_01\n",
     "%store MY_HOST_IPv4_02\n",
     "%store MY_HOST_IPv4_03\n",
-    "\n",
-    "%store MY_NOTEBOOK_DIR\n",
     "%store MY_TSERVER_WEBSERVER_PORT\n",
+    "%store MY_YB_MASTER_HOST_GITPOD_URL\n",
+    "%store MY_YB_TSERVER_HOST_GITPOD_URL\n",
+    "%store MY_NOTEBOOK_DIR\n",
     "%store MY_NOTEBOOK_DATA_FOLDER\n",
     "%store MY_NOTEBOOK_UTILS_FOLDER\n",
-    "\n",
     "%store MY_DATA_DDL_FILE_0\n",
     "%store MY_DATA_DML_FILE_0\n",
     "%store MY_DATA_DDL_FILE_1\n",
@@ -208,38 +239,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# connect use Python 3.7.9+\n",
-    "import psycopg2\n",
-    "import sqlalchemy as alc\n",
-    "from sqlalchemy import create_engine\n",
-    "\n",
-    "# Inspiration from https://medium.com/analytics-vidhya/postgresql-integration-with-jupyter-notebook-deb97579a38d\n",
-    "# Use %store -r to read 01_Lab_Requirements_Setup variables\n",
-    "\n",
-    "\n",
-    "db_host=MY_HOST_IPv4_02\n",
-    "db_name=MY_DB_NAME\n",
-    "\n",
-    "\n",
-    "connection_str='postgresql://yugabyte@'+db_host+':5433/'+db_name\n",
-    "print(connection_str)\n",
-    "\n",
-    "engine = create_engine(connection_str)"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
     "editable": false
    },
    "source": [
-    "### Create the `db_ybu` database with `ysqlsh`\n",
+    "---\n",
+    "## Connect to YugabyteDB with `ysqlsh`, YSQL shell, and create the database\n",
+    "The following commands are YSQL shell commands. Using `ysqlsh`, you can execute YSQL statements.\n",
+    "\n",
     "Run the following cell to connect to the local host using `ysqlsh`, create the `db_ybu` database, and then list the databases."
    ]
   },
@@ -281,6 +291,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -288,7 +299,7 @@
    },
    "source": [
     "#### Util Functions\n",
-    "Runt the following cell to create the utility functions."
+    "Run the following cell to create the utility functions."
    ]
   },
   {
@@ -359,21 +370,6 @@
     "\n",
     "# Describe relations\n",
     "./bin/ysqlsh -d ${DB_NAME} -c \"\\df\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "source": [
-    "### Create tables and loaded data using DDL and DML scripts\n",
-    "In this section of the notebook, you will:\n",
-    "- Create tables with a DDL script\n",
-    "- Load data with a DML script\n",
-    "- Verify the creation of tables and data\n",
-    "- View the DDL for tbl_countries"
    ]
   },
   {
@@ -476,24 +472,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'psycopg2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/seth/Documents/GitHub/YugabyteDB-University/YSQL-LP/01_Lab_Setup.ipynb Cell 23\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/seth/Documents/GitHub/YugabyteDB-University/YSQL-LP/01_Lab_Setup.ipynb#X31sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Connect to db_ybu\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/seth/Documents/GitHub/YugabyteDB-University/YSQL-LP/01_Lab_Setup.ipynb#X31sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# Inspiration from https://medium.com/analytics-vidhya/postgresql-integration-with-jupyter-notebook-deb97579a38d\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/seth/Documents/GitHub/YugabyteDB-University/YSQL-LP/01_Lab_Setup.ipynb#X31sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpsycopg2\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/seth/Documents/GitHub/YugabyteDB-University/YSQL-LP/01_Lab_Setup.ipynb#X31sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msqlalchemy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39malc\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/seth/Documents/GitHub/YugabyteDB-University/YSQL-LP/01_Lab_Setup.ipynb#X31sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msqlalchemy\u001b[39;00m \u001b[39mimport\u001b[39;00m create_engine\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'psycopg2'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Connect to db_ybu\n",
     "# Inspiration from https://medium.com/analytics-vidhya/postgresql-integration-with-jupyter-notebook-deb97579a38d\n",
@@ -505,7 +489,7 @@
     "db_host=MY_HOST_IPv4_01\n",
     "db_name=MY_DB_NAME\n",
     "\n",
-    "connection_str='postgresql://yugabyte:yte@'+db_host+':5433/'+db_name\n",
+    "connection_str='postgresql://yugabyte@'+db_host+':5433/'+db_name\n",
     "print(connection_str)\n",
     "engine = create_engine(connection_str)"
    ]
@@ -544,25 +528,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%sql \\d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sql postgresql://yugabyte@127.0.0.1:5433/db_ybu\n",
-    "# creates connection for sql magic\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -583,7 +548,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql /* row counts */\n",
+    "%%sql \n",
     "\n",
     "select '' _\n",
     "    , v1.name\n",
@@ -609,6 +574,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -616,16 +582,21 @@
    },
    "source": [
     "---\n",
-    "# All done!\n",
-    "In this lab, you completed the following:\n",
-    "\n",
-    "- Setup\n",
+    "# 🌟 Well done! \n",
+    "In this notebook, you completed the following:\n",
+    "- Setup steps\n",
+    "- Connect to YugabyteDB using ysqlsh\n",
     "  - Created the `db_ybu` database with `ysqlsh`\n",
     "  - Created utils\n",
     "  - Created tables and loaded data using DDL and DML scripts\n",
     "  - Connected to the database using a PostgreSQL driver for Python\n",
+    "  - Executed queries with SQL Magic\n",
     "\n",
-    "Next, run the following cell to open `02_YSQL_Fundamentals_.ipynb`."
+    "\n",
+    "## 😊 Next up!\n",
+    "Continue your learning by opening the next notebook, `02_YSQL_Development.ipynb`. \n",
+    "\n",
+    "Or, if using GitPod, run the following cell:"
    ]
   },
   {
@@ -639,7 +610,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "gp open 02_YSQL_Fundamentals.ipynb"
+    "gp open 02_YSQL_Development.ipynb"
    ]
   }
  ],
