--- a/bak/00_Local_Only.ipynb
+++ b/bak/00_Local_Only.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> IMPORTANT: Notebook requirements and how start YugabyteDB locally (mac/linux) with yb-ctl"
+    "#IMPORTANT: Notebook requirements and how start YugabyteDB locally (mac/linux) with yb-ctl"
    ]
   },
   {
@@ -189,7 +190,7 @@
     "    sleep 1\n",
     "fi\n",
     "\n",
-    "# Create clusteer\n",
+    "# Create cluster\n",
     "./bin/yb-ctl --rf 3 create  \\\n",
     "--tserver_flags \"yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,webserver_port=\"${TSERVER_WEBSERVER_PORT}  \\\n",
     "--master_flags \"yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1\" \\\n",
@@ -229,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YCQL API"
+    "### YCQL API"
    ]
   },
   {
@@ -253,6 +254,38 @@
     "./bin/ycqlsh -e \"\n",
     "  select cql_version from system.local;\n",
     "\"  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### YSQL API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # create database\n",
+    "YB_PATH=${1}\n",
+    "DB_NAME=${2}\n",
+    "\n",
+    "cd $YB_PATH\n",
+    "\n",
+    "# drop and create\n",
+    "./bin/ysqlsh -d yugabyte -c \"drop database if exists \"${DB_NAME}\";\"  \n",
+    "./bin/ysqlsh -d yugabyte -c \"create database \"${DB_NAME}\";\" \n",
+    "\n",
+    "# list dbs\n",
+    "./bin/ysqlsh -d yugabyte -c \"\\l\""
    ]
   }
  ],
